[gd_scene load_steps=2 format=2]

[ext_resource path="res://global/StatsManager.gd" type="Script" id=1]

[node name="StatsManager" type="Node"]
script = ExtResource( 1 )

[node name="WindRechargeTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CloudRechargeTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="WindRechargeTimer" to="." method="_on_WindRechargeTimer_timeout"]
[connection signal="timeout" from="CloudRechargeTimer" to="." method="_on_CloudRechargeTimer_timeout"]
